Add copying an attribute from another class

--- a/view/template/_part/tool/clone.ejs
+++ b/view/template/_part/tool/clone.ejs
@@ -1,4 +1,4 @@
-
+<!-- studio/_part/tool/clone -->
 <button data-command="executeUrl" data-url="<%- _url(url) %>" data-selection="true"
         title="Clone" class="btn btn-success btn-light" type="button" >
     <span class="far fa-clone"></span>
