--- a/view/template/_part/tool/inherit.ejs
+++ b/view/template/_part/tool/inherit.ejs
@@ -1,4 +1,4 @@
-
+<!-- studio/_part/tool/inherit -->
 <button data-command="executeUrl" data-url="<%- _url(url) %>" data-selection="true"
         title="Inherit" class="btn btn-white btn-light" type="button" >
     <span class="fa fa-sitemap"></span>
