--- a/view/template/_part/tool/createByUrl.ejs
+++ b/view/template/_part/tool/createByUrl.ejs
@@ -1,4 +1,4 @@
-<!-- _part/tool/createByUrl -->
+<!-- studio/_part/tool/createByUrl -->
 <button data-command="executeUrl" data-url="<%- _url(url) %>" data-index="20" title="<%- title %>"
         class="btn btn-success btn-light" type="button" >
     <span class="glyphicon glyphicon-plus"></span>
