--- a/view/template/enum-item/update.ejs
+++ b/view/template/enum-item/update.ejs
@@ -2,3 +2,9 @@
 <% block('titleTranslation', 'none'); %>
 
 <%- include(_view.getInternalTemplate('_form')) %>
+
+<%- include(_view.get('_part/attr/static'), {
+    attr: 'enum',
+    displayValue: model.getRelatedTitle('enum'),
+    url: ['enum/update', {id: model.get('enum')}]
+}) %>
