--- a/view/template/enum/update.ejs
+++ b/view/template/enum/update.ejs
@@ -2,3 +2,9 @@
 <% block('titleTranslation', 'none'); %>
 
 <%- include(_view.getInternalTemplate('_form')) %>
+
+<%- include(_view.get('_part/attr/static'), {
+    attr: 'owner',
+    displayValue: model.getRelatedTitle('owner'),
+    url: ['class-attr/update', {id: model.get('owner')}]
+}) %>
