--- a/view/template/default/index.ejs
+++ b/view/template/default/index.ejs
@@ -1,16 +1,16 @@
 <% layout(_view.get('_layout/content')) %>
-<% block('title', 'Create application') %>
+<% block('title', 'Create metadata') %>
 
 <div class="folder panel-default panel">
     <div class="panel-body">
         <p>
             The Studio module creates metadata describing domain entities and relationships between them.
             <br>
-            For example, the Blog application consists of the Article, Category, Comment, and others classes.
+            For example, the Blog app consists of the Article, Category, Comment, and others classes.
         </p>
         <p>
-            The created entities are in a separate store.
-            Export them to <b>metadata/app</b> folder to load into the application.
+            The created entities are located in a separate store.
+            Export them to your app metadata folder to start using.
         </p>
     </div>
 </div>
@@ -21,11 +21,12 @@
     </div>
     <div class="panel-body">
         <p>
-            Attribute describes a single class element.<br>
+            The attribute describes a single class element.
+            <br>
             For example, the Article class consists of the Title, Content, Date and other attributes.
         </p>
         <p>
-            Each attribute has a specific type depending on stored data.
+            Each attribute has a specific type depending on the stored data.
             <br>
             For example, the Title attribute is of type String, the Content attribute is of type Text.
         </p>
@@ -38,23 +39,23 @@
     </div>
     <div class="panel-body">
         <p>
-            Attribute types Reference and Back reference define relationship between classes.
-            Link settings are on the Relation tab.
+            The Reference and Back Reference attribute types define the relationship between classes.
+            Link settings are located on the Relation tab.
             <br>
-            The Reference type keeps a link directly in a class instance.
+            The Reference type keeps a link directly in an instance of the class.
             For example, a comment has a link to the article it refers to.
         </p>
         <p>
-            The Back reference type retrieves a link data from referenced class object.
+            The Back Reference type retrieves the link data from the referenced class object.
             <br>
-            For example, comments for an article are retrieved from a back reference,
-            because each comment keeps an article ID. Article itself does not keep any data about comments.
+            For example, comments on an article are retrieved from the back reference,
+            because each comment stores an article ID. Articles do not store any data about comments.
         </p>
         <p>
             The linking can be multiple or single.
             <br>
             An article link in a comment is an example of a single link.
-            A link to comments in an article is an examples of a multiple link.
+            Linking to comments in an article is an example of a multiple link.
         </p>
     </div>
 </div>
