--- a/view/template/_layout/content.ejs
+++ b/view/template/_layout/content.ejs
@@ -31,7 +31,7 @@
 <section class="main-content">
     <div class="main-container container-fluid">
 
-        <%- include(_view.get('_part/other/alert')) %>
+        <%- include(_view.get('_part/misc/alert')) %>
 
         <h1 class="content-header" data-t=""><%- blocks.title %></h1>
 
@@ -44,6 +44,6 @@
     <i class="fa fa-spinner fa-spin"></i>
 </div>
 
-<%- include(_view.get('_part/other/footer')) %>
-<%- include(_view.get('_part/other/frameStack')) %>
+<%- include(_view.get('_part/misc/footer')) %>
+<%- include(_view.get('_part/misc/frameStack')) %>
 
