--- a/view/template/classAttr/_tabMainBase.ejs
+++ b/view/template/classAttr/_tabMainBase.ejs
@@ -53,5 +53,11 @@ const checkboxTemplate = _view.get('_part/attr/checkbox');
             attr: 'history',
             hint: 'Keep history of attribute value changes'
         }
+    },{
+        template: checkboxTemplate,
+        params: {
+            attr: 'hideEmpty',
+            hint: 'Hide attribute with empty value'
+        }
     }]
 }) %>
