--- a/view/template/viewAttr/_tabMain.ejs
+++ b/view/template/viewAttr/_tabMain.ejs
@@ -83,6 +83,12 @@ const stringTemplate = _view.get('_part/attr/string');
                 attr: 'history',
                 template: checkboxTemplate
             }
+        },{
+            template: overriddenTemplate,
+            params: {
+                attr: 'hideEmpty',
+                template: checkboxTemplate
+            }
         }]
     }]
 }) %>
