Migration to Bootstrap 5

--- a/view/template/_layout/content.ejs
+++ b/view/template/_layout/content.ejs
@@ -16,7 +16,7 @@
         <%- include(_view.get('_part/nav/meta')) %>
         <%- include(_view.get('_part/nav/frameStackBack')) %>
 
-        <div class="ml-auto"></div>
+        <div class="ms-auto"></div>
 
         <%- _view.placeWidget('notifications') %>
         <%- include(_view.get('_part/nav/user')) %>
