--- a/view/template/classAttr/_tabRelation.ejs
+++ b/view/template/classAttr/_tabRelation.ejs
@@ -12,7 +12,7 @@ const typeTrigger = ['START TRIGGER', 'type'];
 %>
 <%- include(_view.getInternalTemplate('_tabRelationBase')) %>
 
-<hr class="dashed">
+<hr class="form-divider">
 
 <%- include(columnTemplate, {
     items: [{
