--- a/view/template/_part/tool/modelExport.ejs
+++ b/view/template/_part/tool/modelExport.ejs
@@ -1,5 +1,5 @@
 <!-- studio/_part/tool/modelExport -->
 <button data-jam="FrameUserAction" data-url="<%- url %>" data-need-save-changes="Save changes first"
-         title="Export" class="btn-outline-info btn" type="button">
+         title="Export" class="btn-outline-primary btn" type="button">
     <i class="fas fa-external-link-alt"></i>
 </button>
