Add hierarchical versioning of classes

--- a/view/template/class/filter.ejs
+++ b/view/template/class/filter.ejs
@@ -21,6 +21,10 @@
             },{
                 name: 'label'
             }]
+        },{
+            name: 'version',
+            type: 'selector',
+            url: _url('class/list-select')
         }]
     }
 }) %>
