--- a/view/template/class/_tabMain.ejs
+++ b/view/template/class/_tabMain.ejs
@@ -1,6 +1,7 @@
 <%
-const jsonTemplate = _view.get('_part/attr/json');
 const columnTemplate = _view.get('_part/group/columns');
+const jsonTemplate = _view.get('_part/attr/json');
+const selectTemplate = _view.get('_part/attr/select');
 const stringTemplate = _view.get('_part/attr/string');
 %>
 <%- include(_view.get('_part/attr/text'), {
@@ -33,7 +34,16 @@ const stringTemplate = _view.get('_part/attr/string');
     hint: 'Abstract class cannot be instantiated'
 }) %>
 
-<%- include(_view.get('_part/attr/select'), {
+<%- include(selectTemplate, {
+    attr: 'version',
+    extHint: 'New version replaces the current class when creating objects and uses shared storage',
+    items: null,
+    displayValue: model.getRelatedTitle('version'),
+    select2: {ajax: {url: _url('class/list-select')}},
+    update: _url('class/update')
+}) %>
+
+<%- include(selectTemplate, {
     attr: 'forbiddenView',
     extHint: 'Used when class instance updating is forbidden by security',
     items: null,
