--- a/view/template/classAttr/create.ejs
+++ b/view/template/classAttr/create.ejs
@@ -15,6 +15,6 @@
     attr: 'orderNumber'
 }) %>
 
-<div class="form-container" data-action-binder='{"show":{"type":["backref","ref"]}}'>
+<div class="form-group" data-action-binder='{"show":{"type":["backref","ref"]}}'>
     <%- include(_view.getInternalTemplate('_tabRelationBase')) %>
 </div>
