Fix extended hint for checkboxes

--- a/view/template/class/group/main.ejs
+++ b/view/template/class/group/main.ejs
@@ -32,7 +32,7 @@ const stringTemplate = _view.get('_part/attr/string');
 
 <%- include(_view.get('_part/attr/checkbox'), {
     attr: 'abstract',
-    hint: 'Abstract class cannot be instantiated'
+    extHint: 'Abstract class cannot be instantiated'
 }) %>
 
 <%- include(selectTemplate, {
