--- a/view/template/classIndex/_form.ejs
+++ b/view/template/classIndex/_form.ejs
@@ -19,7 +19,7 @@ const checkboxTemplate = _view.get('_part/attr/checkbox');
 
 <%- include(checkboxTemplate, {
     attr: 'background',
-    hint: 'Build the index without blocking other database activity'
+    extHint: 'Build the index without blocking other database activity'
 }) %>
 
 <%- include(_view.get('_part/attr/json'), {
