--- a/view/template/state/group/main.ejs
+++ b/view/template/state/group/main.ejs
@@ -11,7 +11,7 @@ const checkboxTemplate = _view.get('_part/attr/checkbox');
         template: checkboxTemplate,
         params: {
             attr: 'defaults',
-            hint: 'The state will be automatically set for new objects'
+            extHint: 'The state will be automatically set for new objects'
         }
     }, {
         template: checkboxTemplate,
