--- a/view/template/view/group/main.ejs
+++ b/view/template/view/group/main.ejs
@@ -12,7 +12,7 @@ const viewUpdate = _url('view/update');
 
 <%- include(_view.get('_part/attr/checkbox'), {
     attr: 'readOnly',
-    hint: 'Object in this view is read-only'
+    extHint: 'Object in this view is read-only'
 }) %>
 
 <%- include(jsonTemplate, {
