--- a/view/template/classGroup/group/main.ejs
+++ b/view/template/classGroup/group/main.ejs
@@ -11,25 +11,25 @@ const checkboxTemplate = _view.get('_part/attr/checkbox');
         template: checkboxTemplate,
         params: {
             attr: 'active',
-            hint: 'Expanded group or active tab'
+            extHint: 'Expanded group or active tab'
         }
     }, {
         template: checkboxTemplate,
         params: {
             attr: 'loadable',
-            hint: 'Group content is loaded when activated'
+            extHint: 'Group content is loaded when activated'
         }
     }, {
         template: checkboxTemplate,
         params: {
             attr: 'readOnly',
-            hint: 'All attributes in this group are read-only'
+            extHint: 'All attributes in this group are read-only'
         }
     }, {
         template: checkboxTemplate,
         params: {
             attr: 'required',
-            hint: 'All attributes in this group are required'
+            extHint: 'All attributes in this group are required'
         }
     }]
 }) %>
