--- a/view/template/_part/nav/meta.ejs
+++ b/view/template/_part/nav/meta.ejs
@@ -1,6 +1,6 @@
 <!-- studio/_part/nav/meta -->
 <div class="nav-block">
-    <button type="button" class="nav-btn nav-btn-primary btn" data-bs-toggle="dropdown">
+    <button type="button" class="nav-btn-dark nav-btn btn" data-bs-toggle="dropdown">
         <span data-t="">Meta</span>
     </button>
     <div class="dropdown-menu">
