--- a/view/template/_part/nav/sideMenu.ejs
+++ b/view/template/_part/nav/sideMenu.ejs
@@ -48,6 +48,18 @@
         </a>
     </div>
 
+    <div class="nav-item">
+        <a href="studio/state" class="nav-link">
+            <span data-t="">States</span>
+        </a>
+    </div>
+
+    <div class="nav-item">
+        <a href="studio/transition" class="nav-link">
+            <span data-t="">Transitions</span>
+        </a>
+    </div>
+
     <% if (_module.app.getModule('report')) { %>
     <div class="nav-divider"></div>
     <div class="nav-item">
