--- a/view/template/state/filter.ejs
+++ b/view/template/state/filter.ejs
@@ -11,16 +11,10 @@
         },{
             name: 'name'
         },{
-            name: 'hint'
+            name: 'defaults',
+            type: 'boolean'
         },{
-            name: 'orderNumber',
-            type: 'number'
-        },{
-            name: 'finalState',
-            type: 'selector',
-            url: _url('state/list-select')
-        },{
-            name: 'nullStartState',
+            name: 'readOnly',
             type: 'boolean'
         }]
     }
