--- a/view/template/state/group/main.ejs
+++ b/view/template/state/group/main.ejs
@@ -16,7 +16,8 @@ const checkboxTemplate = _view.get('_part/attr/checkbox');
     }, {
         template: checkboxTemplate,
         params: {
-            attr: 'readOnly'
+            attr: 'readOnly',
+            extHint: 'Object in this state is read-only'
         }
     }]
 }) %>
