--- a/view/template/classGroup/update.ejs
+++ b/view/template/classGroup/update.ejs
@@ -18,14 +18,14 @@ block('titleTranslation', 'none');
         content: _view.getInternalTemplate('group/children'),
         loadable: true
     },{
+        id: 'classAttrs',
+        label: 'Attributes',
+        content: _view.getInternalTemplate('group/classAttrs'),
+        loadable: true
+    },{
         id: 'actionBinders',
         label: 'Action binders',
         content: _view.getInternalTemplate('group/actionBinders'),
-        loadable: true
-    },{
-        id: 'classAttrs',
-        label: 'Class attributes',
-        content: _view.getInternalTemplate('group/classAttrs'),
         loadable: true
     },{
         id: 'viewAttrs',
