--- a/view/template/state/index.ejs
+++ b/view/template/state/index.ejs
@@ -1,16 +1,17 @@
 <%
-layout(_view.get('_layout/frame/select'));
-block('title', 'Parent class views');
+layout(_view.get('_layout/list'));
+block('title', 'States');
 %>
 
-<%- include(_view.get('_part/list/select'), {
+<%- include(_view.get('_part/list/grid'), {
     data: {
         columns: [{
             name: 'class',
             format: {
                 name: 'relation',
                 url: _url('class/update')
-            }
+            },
+            sortable: true
         },{
             name: 'name',
             sortable: true,
@@ -19,11 +20,13 @@ block('title', 'Parent class views');
             name: 'label',
             sortable: true,
             searchable: true
+        },{
+            name: 'description'
+        },{
+            name: 'defaults',
+            format: 'boolean'
         }],
-        multiple: false,
-        list: ['list-from-parent', classModel],
-        order: {name: 1},
         create: null,
-        delete: null
+        filter: {}
     }
 }) %>
