--- a/view/template/_part/ruleParam/condition.ejs
+++ b/view/template/_part/ruleParam/condition.ejs
@@ -1,7 +1,8 @@
 <!-- studio/_part/ruleParam/condition -->
 
 <%- include(_view.get('_part/attr/json'), {
-    attr: 'condition'
+    attr: 'condition',
+    extHint: 'Expression or spawn configuration for calculating a true value'
 }) %>
 
 <%- include(_view.get('_part/attr/string'), {
