--- a/view/template/class/group/behaviors.ejs
+++ b/view/template/class/group/behaviors.ejs
@@ -7,7 +7,7 @@
             name: 'type',
             translateData: ''
         }, {
-            name: 'param'
+            name: 'description'
         }, {
             name: 'orderNumber'
         }],
