--- a/view/template/classAttr/group/relation.ejs
+++ b/view/template/classAttr/group/relation.ejs
@@ -89,7 +89,7 @@ const typeTrigger = ['START TRIGGER', 'type'];
 
 <%- include(_view.get('_part/attr/json'), {
     attr: 'filter',
-    extHint: 'Filter condition or class configuration for custom query related objects'
+    extHint: 'Filter condition or spawn configuration for custom query related objects'
 }) %>
 
 <%- include(_view.get('_part/attr/relation'), {
