--- a/view/template/view/group/validators.ejs
+++ b/view/template/view/group/validators.ejs
@@ -10,7 +10,7 @@
             name: 'type',
             format: 'label'
         }, {
-            name: 'param'
+            name: 'description'
         }, {
             name: 'orderNumber'
         }],
