--- a/view/template/_part/ruleParam/expression.ejs
+++ b/view/template/_part/ruleParam/expression.ejs
@@ -2,7 +2,7 @@
 
 <%- include(_view.get('_part/attr/json'), {
     attr: 'expression',
-    extHint: 'Expression or class configuration for calculating required value'
+    extHint: 'Expression or spawn configuration for calculating required value'
 }) %>
 
 <%- include(_view.get('_part/attr/string'), {
