--- a/view/template/viewAttr/group/validators.ejs
+++ b/view/template/viewAttr/group/validators.ejs
@@ -7,7 +7,7 @@
             name: 'type',
             format: 'label'
         }, {
-            name: 'param'
+            name: 'description'
         }, {
             name: 'orderNumber'
         }],
