--- a/view/template/node/group/main.ejs
+++ b/view/template/node/group/main.ejs
@@ -30,7 +30,7 @@ const selectTemplate = _view.get('_part/attr/select');
                     attr: 'class',
                     param: 'pid'
                 }],
-                actionBinder: {enable: ['NOT EMPTY', 'class']}
+                actionBinder: {enable: ['notEmpty', 'class']}
             }
         }]
     }, {
