--- a/view/template/classAttr/group/relation.ejs
+++ b/view/template/classAttr/group/relation.ejs
@@ -3,7 +3,7 @@ const viewSelect2 = {ajax: {url: _url('view/list-select')}};
 const attrUpdate = _url('class-attr/update');
 const classUpdate = _url('class/update');
 const viewUpdate = _url('view/update');
-const refClassExists = {enable: ['NOT EMPTY', 'refClass']};
+const refClassExists = {enable: ['notEmpty', 'refClass']};
 const refClassMaster = [{attr: 'refClass', param: 'pid'}];
 const checkboxTemplate = _view.get('_part/attr/checkbox');
 const columnTemplate = _view.get('_part/group/columns');
