--- a/view/template/class/group/views.ejs
+++ b/view/template/class/group/views.ejs
@@ -27,7 +27,7 @@ if (model.hasParent()) {
         select: ['view/select-from-parent', model],
         clone: ['view/link-to-parent', model],
         icon: 'fa fa-link',
-        title: 'Add view from parent class'
+        title: 'Link view from parent class'
     });
 }
 %>
