--- a/view/template/classAttr/group/mainBase.ejs
+++ b/view/template/classAttr/group/mainBase.ejs
@@ -46,7 +46,7 @@ const checkboxTemplate = _view.get('_part/attr/checkbox');
         template: checkboxTemplate,
         params: {
             attr: 'trim',
-            extHint: 'Remove spaces from both ends of an attribute value'
+            extHint: 'Remove spaces from both ends of input value'
         }
     },{
         template: checkboxTemplate,
