--- a/view/template/_part/tool/clone.ejs
+++ b/view/template/_part/tool/clone.ejs
@@ -1,5 +1,5 @@
 <!-- studio/_part/tool/clone -->
-<button class="btn-outline-success btn" title="Clone" type="button"
+<button class="btn-white btn-outline-success btn" title="Clone" type="button"
         data-command="executeUrl"
         data-url="<%- _url(url) %>"
         data-selection="true">
