--- a/view/template/_part/tool/inherit.ejs
+++ b/view/template/_part/tool/inherit.ejs
@@ -1,5 +1,5 @@
 <!-- studio/_part/tool/inherit -->
 <button data-command="executeUrl" data-url="<%- _url(url) %>" data-selection="true"
-        title="Inherit" class="btn-outline-secondary btn" type="button" >
+        title="Inherit" class="btn-white btn-outline-secondary btn" type="button" >
     <i class="fa fa-sitemap"></i>
 </button>
