--- a/view/template/class/group/attrs.ejs
+++ b/view/template/class/group/attrs.ejs
@@ -5,8 +5,7 @@ const columns = [{
     sortable: true
 }, {
     name: 'label',
-    searchable: true,
-    escape: false
+    searchable: true
 }, {
     name: 'type',
     format: 'label'
