--- a/view/template/class/group/groups.ejs
+++ b/view/template/class/group/groups.ejs
@@ -6,8 +6,7 @@ const columns = [{
 },{
     name: 'label',
     searchable: true,
-    sortable: true,
-    escape: false
+    sortable: true
 },{
     name: 'parent',
     format: {
