Add group lists

--- a/view/template/classAttr/filter.ejs
+++ b/view/template/classAttr/filter.ejs
@@ -61,6 +61,9 @@
             name: 'viewType',
             type: 'selector',
             items: 'labels'
+        },{
+            name: 'orderNumber',
+            type: 'number'
         }]
     }
 }) %>
