--- a/view/template/_part/nav/sideMenu.ejs
+++ b/view/template/_part/nav/sideMenu.ejs
@@ -15,6 +15,14 @@
     </div>
 
     <div class="nav-item">
+        <a href="studio/class-group" class="nav-link">
+            <span data-t="">Class groups</span>
+        </a>
+    </div>
+
+    <div class="nav-divider"></div>
+
+    <div class="nav-item">
         <a href="studio/view" class="nav-link">
             <span data-t="">Views</span>
         </a>
@@ -23,6 +31,12 @@
     <div class="nav-item">
         <a href="studio/view-attr" class="nav-link">
             <span data-t="">View attributes</span>
+        </a>
+    </div>
+
+    <div class="nav-item">
+        <a href="studio/view-group" class="nav-link">
+            <span data-t="">View groups</span>
         </a>
     </div>
 
