--- a/view/template/classGroup/index.ejs
+++ b/view/template/classGroup/index.ejs
@@ -6,8 +6,6 @@ block('title', 'Class groups');
 <%- include(_view.get('_part/list/grid'), {
     data: {
         columns: [{
-            name: 'class'
-        },{
             name: 'name',
             sortable: true,
             searchable: true
@@ -15,7 +13,24 @@ block('title', 'Class groups');
             name: 'label',
             sortable: true,
             searchable: true
+        },{
+            name: 'description'
+        },{
+            name: 'parent',
+            format: {
+                name: 'relation',
+                url: _url('class-group/update')
+            },
+            sortable: true
+        },{
+            name: 'class',
+            format: {
+                name: 'relation',
+                url: _url('class/update')
+            },
+            sortable: true
         }],
-        create: null
+        create: null,
+        filter: {}
     }
 }) %>
