--- a/view/template/viewGroup/index.ejs
+++ b/view/template/viewGroup/index.ejs
@@ -1,15 +1,15 @@
 <%
 layout(_view.get('_layout/list'));
-block('title', 'View attributes');
+block('title', 'View groups');
 %>
 
 <%- include(_view.get('_part/list/grid'), {
     data: {
         columns: [{
-            name: 'classAttr',
+            name: 'classGroup',
             format: {
                 name: 'relation',
-                url: _url('class-attr/update')
+                url: _url('class-group/update')
             },
             sortable: true
         },{
@@ -17,26 +17,19 @@ block('title', 'View attributes');
             sortable: true,
             searchable: true
         },{
-            name: 'viewType',
-            escape: false,
-            translateData: ''
+            name: 'description'
+        },{
+            name: 'parent',
+            format: {
+                name: 'relation',
+                url: _url('class-group/update')
+            }
         },{
             name: 'view',
             format: {
                 name: 'relation',
                 url: _url('view/update')
             },
-            sortable: true
-        },{
-            name: 'class',
-            format: {
-                name: 'relation',
-                url: _url('class/update')
-            },
-            sortable: true
-        },{
-            name: 'orderNumber',
-            type: 'integer',
             sortable: true
         }],
         create: null,
