--- a/view/template/node/_form.ejs
+++ b/view/template/node/_form.ejs
@@ -37,6 +37,9 @@
                 value: '',
                 text: 'Node'
             }, {
+                value: 'container',
+                text: 'Container'
+            }, {
                 value: 'divider',
                 text: 'Divider'
             }, {
