--- a/view/template/section/create.ejs
+++ b/view/template/section/create.ejs
@@ -1,3 +1,5 @@
 <% block('title', 'Create navigation section') %>
 
 <%- include(_view.getInternalTemplate('_form')) %>
+
+<%- include(_view.getInternalTemplate('group/main')) %>
