--- a/view/template/enumItem/update.ejs
+++ b/view/template/enumItem/update.ejs
@@ -8,5 +8,6 @@ block('titleTranslation', 'none');
 <%- include(_view.get('_part/attr/static'), {
     attr: 'enum',
     displayValue: model.getRelatedTitle('enum'),
-    url: ['enum/update', {id: model.get('enum')}]
+    url: ['enum/update', {id: model.get('enum')}],
+    escape: false
 }) %>
